--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.8",
         "phpoffice/phpspreadsheet": "^3.3",
         "symfony/polyfill-php72": "^1.31",
+        "tymon/jwt-auth": "2.1.1",
         "yajra/laravel-datatables-oracle": "^10.11"
     },
     "require-dev": {
